fix(commands): fix command list menu overlapping chat input

--- a/client/src/features/CommandList/CommandList.scss
+++ b/client/src/features/CommandList/CommandList.scss
@@ -4,9 +4,11 @@
   @include mixins.transition;
 
   position: absolute;
-  top: -160px;
+  // top: -160px;
+  bottom: calc(100% + 10px);
   right: 0;
   min-height: 150px;
+  max-height: 80%;
   width: 100%;
   border-radius: var(--small-radius);
   background-color: var(--secondary);
@@ -74,7 +76,7 @@
     padding: 10px;
     padding-top: 40px;
     gap: 10px;
-    max-height: 50vh;
+    
     overflow-y: auto;
   }
 }
